Updated lib32-mesa - 1:25.1.1-1

--- a/lib32/lib32-mesa/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-mesa/.artixlinux/pkgbase.yaml
@@ -1,21 +1,4 @@
 ---
-pkgbase:
-  name: lib32-mesa
-  version: 1:25.0.5-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-mesa
-    - lib32-opencl-clover-mesa
-    - lib32-opencl-rusticl-mesa
-    - lib32-vulkan-dzn
-    - lib32-vulkan-gfxstream
-    - lib32-vulkan-intel
-    - lib32-vulkan-nouveau
-    - lib32-vulkan-radeon
-    - lib32-vulkan-swrast
-    - lib32-vulkan-virtio
-    - lib32-vulkan-mesa-layers
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -28,48 +11,59 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 1:25.0.5-1
+    version: 1:25.1.1-1
     packages:
-      - lib32-mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-opencl-clover-mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-opencl-rusticl-mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-dzn-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-gfxstream-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-intel-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-nouveau-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-radeon-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-swrast-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-virtio-1:25.0.5-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-mesa-layers-1:25.0.5-1-x86_64.pkg.tar.zst
+      - lib32-mesa-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-opencl-mesa-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-dzn-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-gfxstream-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-intel-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-nouveau-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-radeon-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-swrast-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-virtio-1:25.1.1-1-x86_64.pkg.tar.zst
+      - lib32-vulkan-mesa-layers-1:25.1.1-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
