--- a/world/iperf3/.artixlinux/pkgbase.yaml
+++ b/world/iperf3/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: iperf3
-  version: 3.18-1
+  version: 3.19-1
   arch:
     - x86_64
   pkgname:
     - iperf3
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.18-1
+    version: 3.19-1
     packages:
-      - iperf3-3.18-1-x86_64.pkg.tar.zst
+      - iperf3-3.19-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
