--- a/world/mesa/.artixlinux/pkgbase.yaml
+++ b/world/mesa/.artixlinux/pkgbase.yaml
@@ -1,22 +1,4 @@
 ---
-pkgbase:
-  name: mesa
-  version: 1:25.0.5-1
-  arch:
-    - x86_64
-  pkgname:
-    - mesa
-    - opencl-clover-mesa
-    - opencl-rusticl-mesa
-    - vulkan-dzn
-    - vulkan-gfxstream
-    - vulkan-intel
-    - vulkan-nouveau
-    - vulkan-radeon
-    - vulkan-swrast
-    - vulkan-virtio
-    - vulkan-mesa-layers
-    - mesa-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -29,49 +11,60 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:25.0.5-1
+    version: 1:25.1.1-1
     packages:
-      - mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - opencl-clover-mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - opencl-rusticl-mesa-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-dzn-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-gfxstream-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-intel-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-nouveau-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-radeon-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-swrast-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-virtio-1:25.0.5-1-x86_64.pkg.tar.zst
-      - vulkan-mesa-layers-1:25.0.5-1-x86_64.pkg.tar.zst
-      - mesa-docs-1:25.0.5-1-x86_64.pkg.tar.zst
+      - mesa-1:25.1.1-1-x86_64.pkg.tar.zst
+      - opencl-mesa-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-dzn-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-gfxstream-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-intel-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-nouveau-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-radeon-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-swrast-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-virtio-1:25.1.1-1-x86_64.pkg.tar.zst
+      - vulkan-mesa-layers-1:25.1.1-1-x86_64.pkg.tar.zst
+      - mesa-docs-1:25.1.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
