Updated perl-cpan-requirements-dynamic - 0.002-1

--- a/world/perl-cpan-requirements-dynamic/.artixlinux/pkgbase.yaml
+++ b/world/perl-cpan-requirements-dynamic/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: perl-cpan-requirements-dynamic
-  version: 0.001-2
+  version: 0.002-1
   arch:
     - any
   pkgname:
     - perl-cpan-requirements-dynamic
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.001-2
+    version: 0.002-1
     packages:
-      - perl-cpan-requirements-dynamic-0.001-2-any.pkg.tar.zst
+      - perl-cpan-requirements-dynamic-0.002-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
