--- a/world/highlight/.artixlinux/pkgbase.yaml
+++ b/world/highlight/.artixlinux/pkgbase.yaml
@@ -1,59 +1,62 @@
 ---
-pkgbase:
-  name: highlight
-  version: 4.15-5
-  arch:
-    - x86_64
-  pkgname:
-    - highlight
-    - highlight-perl
-    - highlight-gui
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.15-5
+    version: 4.16-1
     packages:
-      - highlight-4.15-5-x86_64.pkg.tar.zst
-      - highlight-perl-4.15-5-x86_64.pkg.tar.zst
-      - highlight-gui-4.15-5-x86_64.pkg.tar.zst
+      - highlight-4.16-1-x86_64.pkg.tar.zst
+      - highlight-perl-4.16-1-x86_64.pkg.tar.zst
+      - highlight-gui-4.16-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
