Updated mesa-demos - 9.0.0-6

--- a/world/mesa-demos/PKGBUILD
+++ b/world/mesa-demos/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase=mesa-demos
 pkgname=('mesa-demos' 'mesa-utils')
 pkgver=9.0.0
-pkgrel=5
+pkgrel=6
 arch=('x86_64')
 url="https://www.mesa3d.org/"
 license=('MIT')
@@ -32,6 +32,7 @@ build() {
 
   artix-meson mesa-demos-$pkgver build \
     -D gles1=disabled \
+    -D osmesa=disabled \
     -D with-system-data-files=true
 
   # Print config
