--- a/world/mesa-demos/.artixlinux/pkgbase.yaml
+++ b/world/mesa-demos/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: mesa-demos
-  version: 9.0.0-5
-  arch:
-    - x86_64
-  pkgname:
-    - mesa-demos
-    - mesa-utils
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 9.0.0-5
+    version: 9.0.0-6
     packages:
-      - mesa-demos-9.0.0-5-x86_64.pkg.tar.zst
-      - mesa-utils-9.0.0-5-x86_64.pkg.tar.zst
+      - mesa-demos-9.0.0-6-x86_64.pkg.tar.zst
+      - mesa-utils-9.0.0-6-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
