--- a/world/ruby/.artixlinux/pkgbase.yaml
+++ b/world/ruby/.artixlinux/pkgbase.yaml
@@ -1,63 +1,64 @@
 ---
-pkgbase:
-  name: ruby
-  version: 3.4.3-2
-  arch:
-    - x86_64
-  pkgname:
-    - ruby
-    - ruby-docs
-    - ruby-default-gems
-    - ruby-bundled-gems
-    - ruby-stdlib
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.4.3-2
+    version: 3.4.4-1
     packages:
-      - ruby-3.4.3-2-x86_64.pkg.tar.zst
-      - ruby-docs-3.4.3-2-x86_64.pkg.tar.zst
-      - ruby-default-gems-3.4.3-2-x86_64.pkg.tar.zst
-      - ruby-bundled-gems-3.4.3-2-x86_64.pkg.tar.zst
-      - ruby-stdlib-3.4.3-2-x86_64.pkg.tar.zst
+      - ruby-3.4.4-1-x86_64.pkg.tar.zst
+      - ruby-docs-3.4.4-1-x86_64.pkg.tar.zst
+      - ruby-default-gems-3.4.4-1-x86_64.pkg.tar.zst
+      - ruby-bundled-gems-3.4.4-1-x86_64.pkg.tar.zst
+      - ruby-stdlib-3.4.4-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
