Updated libxfce4windowing - 4.20.3-1

--- a/galaxy/libxfce4windowing/.artixlinux/pkgbase.yaml
+++ b/galaxy/libxfce4windowing/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: libxfce4windowing
-  version: 4.20.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - libxfce4windowing
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 4.20.2-2
+    version: 4.20.3-1
     packages:
-      - libxfce4windowing-4.20.2-2-x86_64.pkg.tar.zst
+      - libxfce4windowing-4.20.3-1-x86_64.pkg.tar.zst
+    debug: []
