--- a/galaxy/thunar-archive-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/thunar-archive-plugin/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: thunar-archive-plugin
-  version: 0.5.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - thunar-archive-plugin
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.5.3-1
+    version: 0.6.0-1
     packages:
-      - thunar-archive-plugin-0.5.3-1-x86_64.pkg.tar.zst
+      - thunar-archive-plugin-0.6.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
