--- a/galaxy/xfce4-battery-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-battery-plugin/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: xfce4-battery-plugin
-  version: 1.1.6-1
-  arch:
-    - x86_64
-  pkgname:
-    - xfce4-battery-plugin
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1.1.6-1
+    version: 1.2.0-1
     packages:
-      - xfce4-battery-plugin-1.1.6-1-x86_64.pkg.tar.zst
+      - xfce4-battery-plugin-1.2.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
