--- a/galaxy/xfce4-clipman-plugin/PKGBUILD
+++ b/galaxy/xfce4-clipman-plugin/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: Evangelos Foutras <foutrelis@archlinux.org>
-# Maintainer: Robin Candau <antiz@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
+# Contributor: Robin Candau <antiz@archlinux.org>
 # Contributor: tobias <tobias at archlinux.org>
 # Contributor: Aurelien Foret <orelien@chez.com>
 
 pkgname=xfce4-clipman-plugin
-pkgver=1.6.7
+pkgver=1.7.0
 pkgrel=1
 pkgdesc="A clipboard plugin for the Xfce4 panel"
 arch=('x86_64')
@@ -12,10 +13,10 @@ license=('GPL-2.0-or-later')
 url="https://docs.xfce.org/panel-plugins/xfce4-clipman-plugin/start"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxtst' 'qrencode')
-makedepends=('git' 'xfce4-dev-tools')
+makedepends=('git' 'meson' 'xfce4-dev-tools')
 source=("git+https://gitlab.xfce.org/panel-plugins/xfce4-clipman-plugin.git#tag=$pkgname-$pkgver"
         git+https://gitlab.freedesktop.org/wlroots/wlr-protocols.git)
-sha256sums=('87a23a4dd459609588a0988dccfd66c12d199c6c0c5d1faa48af8d2a4dc55c2b'
+sha256sums=('ab9e5ffa5f6922af60c4fb9ad4a08b0bf507f0e34f2ad1120a46eaefca8f73b3'
             'SKIP')
 
 prepare() {
@@ -23,23 +24,16 @@ prepare() {
   git submodule init
   git config submodule.mate-submodules.url "$srcdir/protocols/wlr-protocols"
   git -c protocol.file.allow=always submodule update
-  NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --disable-debug \
-    --enable-maintainer-mode
-  make
+  artix-meson $pkgname build \
+    --localstatedir=/var
+  meson compile -C build
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 }
 
 # vim:set ts=2 sw=2 et:
