--- a/galaxy/xfce4-diskperf-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-diskperf-plugin/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: xfce4-diskperf-plugin
-  version: 2.7.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - xfce4-diskperf-plugin
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 2.7.1-1
+    version: 2.8.0-2
     packages:
-      - xfce4-diskperf-plugin-2.7.1-1-x86_64.pkg.tar.zst
+      - xfce4-diskperf-plugin-2.8.0-2-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
