--- a/galaxy/xfce4-fsguard-plugin/PKGBUILD
+++ b/galaxy/xfce4-fsguard-plugin/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: Evangelos Foutras <foutrelis@archlinux.org>
-# Maintainer: Robin Candau <antiz@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
+# Contributor: Robin Candau <antiz@archlinux.org>
 # Contributor: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Ben <ben@benmazer.net>
 
 pkgname=xfce4-fsguard-plugin
-pkgver=1.1.4
+pkgver=1.2.0
 pkgrel=1
 pkgdesc="File system usage monitor plugin for the Xfce4 panel"
 arch=('x86_64')
@@ -12,29 +13,19 @@ license=('BSD-2-Clause')
 url="https://docs.xfce.org/panel-plugins/xfce4-fsguard-plugin/start"
 groups=('xfce4-goodies')
 depends=('xfce4-panel')
-makedepends=('git' 'xfce4-dev-tools')
+makedepends=('git' 'meson' 'xfce4-dev-tools')
 source=("git+https://gitlab.xfce.org/panel-plugins/xfce4-fsguard-plugin.git#tag=$pkgname-$pkgver")
-sha256sums=('38647f96147d7ecccdae63483a0b2ebd5ad04f2932aba5627be5cc63a4603da6')
-
-prepare() {
-  cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
-}
+sha256sums=('d44618a302ae94cd0e79870b7f789d74cbc7c1a5be42317b40fe10aed5ceeb8d')
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --disable-debug
-  make
+  artix-meson $pkgname build \
+    --localstatedir=/var
+  meson compile -C build
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
-  install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
+  meson install -C build --destdir "$pkgdir"
+  install -Dm644 $pkgname/COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
 
 # vim:set ts=2 sw=2 et:
