Updated xfce4-panel-profiles - 1.1.1-1

--- a/galaxy/xfce4-panel-profiles/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-panel-profiles/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: xfce4-panel-profiles
-  version: 1.0.15-2
-  arch:
-    - any
-  pkgname:
-    - xfce4-panel-profiles
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1.0.15-2
+    version: 1.1.1-1
     packages:
-      - xfce4-panel-profiles-1.0.15-2-any.pkg.tar.zst
+      - xfce4-panel-profiles-1.1.1-1-any.pkg.tar.zst
+    debug: []
