--- a/galaxy/xfce4-screenshooter/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-screenshooter/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: xfce4-screenshooter
-  version: 1.11.1-3
-  arch:
-    - x86_64
-  pkgname:
-    - xfce4-screenshooter
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1.11.1-3
+    version: 1.11.2-1
     packages:
-      - xfce4-screenshooter-1.11.1-3-x86_64.pkg.tar.zst
+      - xfce4-screenshooter-1.11.2-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
