--- a/galaxy/xfce4-screenshooter/PKGBUILD
+++ b/galaxy/xfce4-screenshooter/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Contributor: Evangelos Foutras <foutrelis@archlinux.org>
-# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
+# Contributor: Robin Candau <antiz@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-screenshooter
-pkgver=1.11.1
-pkgrel=3
+pkgver=1.11.2
+pkgrel=1
 pkgdesc="An application to take screenshots"
 arch=('x86_64')
 url="https://docs.xfce.org/apps/xfce4-screenshooter/start"
 license=('GPL-2.0-or-later')
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'hicolor-icon-theme')
+depends=('xfce4-panel' 'hicolor-icon-theme' 'wayland-protocols')
 makedepends=('git' 'glib2-devel' 'xfce4-dev-tools')
 optdepends=(
   'curl: upload screenshots to Imgur'
@@ -21,7 +21,7 @@ optdepends=(
 )
 source=("git+https://gitlab.xfce.org/apps/xfce4-screenshooter.git#tag=$pkgname-$pkgver"
         git+https://gitlab.freedesktop.org/wlroots/wlr-protocols.git)
-sha256sums=('46ab89a112f3336af1327a4169159aeb82855ae1340b7d7ec5dd8c35fab267d0'
+sha256sums=('8f12610907e922d615598a0a8be2fe8234f7dc8e5192c26d7d57fe7be1c2291d'
             'SKIP')
 
 prepare() {
