Updated xfce4-taskmanager - 1.6.0-1

--- a/galaxy/xfce4-taskmanager/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-taskmanager/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: xfce4-taskmanager
-  version: 1.5.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - xfce4-taskmanager
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1.5.8-1
+    version: 1.6.0-1
     packages:
-      - xfce4-taskmanager-1.5.8-1-x86_64.pkg.tar.zst
+      - xfce4-taskmanager-1.6.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
