--- a/galaxy/xfce4-time-out-plugin/PKGBUILD
+++ b/galaxy/xfce4-time-out-plugin/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: Evangelos Foutras <foutrelis@archlinux.org>
-# Maintainer: Robin Candau <antiz@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
+# Contributor: Robin Candau <antiz@archlinux.org>
 # Contributor: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Abhishek Dasgupta <abhidg@gmail.com>
 
 pkgname=xfce4-time-out-plugin
-pkgver=1.1.4
+pkgver=1.2.0
 pkgrel=1
 pkgdesc="Take a break from your computer with this plugin for Xfce4"
 arch=('x86_64')
@@ -12,28 +13,18 @@ url="https://docs.xfce.org/panel-plugins/xfce4-time-out-plugin/start"
 groups=('xfce4-goodies')
 license=('GPL-2.0-or-later')
 depends=('xfce4-panel')
-makedepends=('git' 'xfce4-dev-tools')
+makedepends=('git' 'meson' 'xfce4-dev-tools')
 source=("git+https://gitlab.xfce.org/panel-plugins/xfce4-time-out-plugin.git#tag=$pkgname-$pkgver")
-sha256sums=('ce345a90feb1838d0ee31368b2b34e488032d8c7a103c058876ab66450f004c3')
-
-prepare() {
-  cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
-}
+sha256sums=('eb415a3c39f4cf253d36f76cbb762b88ab0c57ed00f6a7c05caa6bebbf2ce86a')
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --disable-debug
-  make
+  artix-meson $pkgname build \
+    --localstatedir=/var
+  meson compile -C build
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 }
 
 # vim:set ts=2 sw=2 et:
