--- a/galaxy/xfce4-whiskermenu-plugin/PKGBUILD
+++ b/galaxy/xfce4-whiskermenu-plugin/PKGBUILD
@@ -5,29 +5,24 @@
 # Contributor: Graeme Gott <graeme@gottcode.org>
 
 pkgname=xfce4-whiskermenu-plugin
-pkgver=2.9.2
-pkgrel=2
+pkgver=2.10.0
+pkgrel=1
 pkgdesc='Menu for Xfce4'
 arch=('x86_64')
 url='https://docs.xfce.org/panel-plugins/xfce4-whiskermenu-plugin/start'
 license=('GPL-2.0-or-later')
 groups=('xfce4-goodies')
 depends=('accountsservice' 'garcon' 'gtk3' 'gtk-layer-shell' 'xfce4-panel')
-makedepends=('cmake' 'git' 'ninja')
+makedepends=('git' 'meson' 'ninja')
 optdepends=('mugshot: Update user details')
 source=("git+https://gitlab.xfce.org/panel-plugins/xfce4-whiskermenu-plugin.git#tag=v${pkgver}")
-sha256sums=('c81107cb2d6a3358da225ce62771f5f8d7400d2c896accfbd92846098a09de15')
+sha256sums=('1e870594f5da764ec65ad0df62ce71403f5b0541adcd960fe268b87d8ba4e601')
 
 build() {
-  cmake -B build -S "${pkgname}" \
-    -DCMAKE_BUILD_TYPE='None' \
-    -DCMAKE_INSTALL_PREFIX='/usr' \
-    -DCMAKE_INSTALL_LIBDIR='lib' \
-    -GNinja \
-    -Wno-dev
-  cmake --build build
+  artix-meson $pkgname build
+  meson compile -C build
 }
 
 package() {
-  DESTDIR="${pkgdir}" cmake --install build
+  meson install -C build --destdir "$pkgdir"
 }
