--- a/galaxy/xfce4-xkb-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-xkb-plugin/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: xfce4-xkb-plugin
-  version: 0.8.5-2.1
-  arch:
-    - x86_64
-  pkgname:
-    - xfce4-xkb-plugin
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.8.5-2
+    version: 0.9.0-1
     packages:
-      - xfce4-xkb-plugin-0.8.5-2-x86_64.pkg.tar.zst
+      - xfce4-xkb-plugin-0.9.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
