Updated python-pytest-asyncio - 0.26.0-1

--- a/world/python-pytest-asyncio/PKGBUILD
+++ b/world/python-pytest-asyncio/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 pkgname=python-pytest-asyncio
-pkgver=0.25.3
+pkgver=0.26.0
 pkgrel=1
 pkgdesc="Pytest support for asyncio."
 arch=('any')
 url="https://github.com/pytest-dev/pytest-asyncio"
 license=('Apache-2.0')
 depends=('python' 'python-pytest')
-makedepends=('git' 'python-build' 'python-installer' 'python-setuptools-scm' 'python-wheel')
+makedepends=('git' 'python-build' 'python-installer' 'python-setuptools-scm')
 checkdepends=('python-hypothesis')
 source=("git+https://github.com/pytest-dev/pytest-asyncio.git#tag=v$pkgver?signed")
-b2sums=('729bd4c31d6cab7359cf3a0f58e7fc505b2e7393074f443b4b3ff8618f8cf129a9670092b07a6a86b7e8909eb95650031392b1d0be85db67bb5ea58296eaddfe')
+b2sums=('25176aa10cdf915e8bd8e85a68e81e5a3ab406a345644c82f232e7340e32a57690003f1182c32ca7ab41d6bad6fa61d28e69bdb534bc915397d0ab0958cbdf42')
 validpgpkeys=('856F4E797CAB2AA5A0A967E1F0827C47163A10D6') # Michael Seifert <m.seifert@digitalernachschub.de>
 
 build() {
