Updated python-hypothesis - 6.131.23-1

--- a/world/python-hypothesis/PKGBUILD
+++ b/world/python-hypothesis/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-hypothesis
-pkgver=6.131.15
+pkgver=6.131.23
 pkgrel=1
 pkgdesc="Advanced Quickcheck style testing library for Python"
 arch=(any)
@@ -58,8 +58,8 @@ optdepends=(
   'python-watchdog: for tracking file system events'
 )
 source=("$pkgname::git+$_url#tag=hypothesis-python-$pkgver")
-sha512sums=('42f5947a56222ec3303766d3373d67d040b78bdb08d1e023aaa647c20796fe7bbf622c790c69140fb8dba204ec235b2b404b632895c14bc51f7e74d30852ff68')
-b2sums=('644242ad49e2b3d2142b07d94bba08a48024d96c7fb89773445d70a94677d05d167dfceb72254edbf9b2b1e3eaab2c3e80a13d78a6e231b8309f331bce35ac8e')
+sha512sums=('27b835eb87d5a4265e3de56e0eab06ba34c5647866c521b577fd9b7c78ba5a285c4aaf15217cf9f8bd0f22a5a393dc8c091b0b30aea54efc4eb790a05d95c32e')
+b2sums=('9fd704f9c91ea5b864b65810128e75c3801b4180d11152b92f6c2822e4c7164879b388da623300c66efce6a4531d8aa1a8ede09a99b24774783e76647900a86d')
 
 prepare() {
   cd $pkgname/hypothesis-python
@@ -83,6 +83,8 @@ check() {
     --ignore=tests/crosshair/test_crosshair.py
     # Fails with AssertionError for some reason
     --ignore=tests/nocover/test_scrutineer.py
+
+    -W=ignore::DeprecationWarning
   )
   PATH="$PWD/test-env/bin:$PATH" test-env/bin/python -m pytest \
     "${pytest_options[@]}" tests/
