--- a/world/grpc/.artixlinux/pkgbase.yaml
+++ b/world/grpc/.artixlinux/pkgbase.yaml
@@ -1,16 +1,4 @@
 ---
-pkgbase:
-  name: grpc
-  version: 1.72.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - grpc
-    - python-grpcio
-    - python-grpcio-tools
-    - php-grpc
-    - php-legacy-grpc
-    - grpc-cli
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -23,43 +11,55 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.72.0-1
+    version: 1.72.0-2
     packages:
-      - grpc-1.72.0-1-x86_64.pkg.tar.zst
-      - python-grpcio-1.72.0-1-x86_64.pkg.tar.zst
-      - python-grpcio-tools-1.72.0-1-x86_64.pkg.tar.zst
-      - php-grpc-1.72.0-1-x86_64.pkg.tar.zst
-      - php-legacy-grpc-1.72.0-1-x86_64.pkg.tar.zst
-      - grpc-cli-1.72.0-1-x86_64.pkg.tar.zst
+      - grpc-1.72.0-2-x86_64.pkg.tar.zst
+      - python-grpcio-1.72.0-2-x86_64.pkg.tar.zst
+      - python-grpcio-tools-1.72.0-2-x86_64.pkg.tar.zst
+      - php-grpc-1.72.0-2-x86_64.pkg.tar.zst
+      - php-legacy-grpc-1.72.0-2-x86_64.pkg.tar.zst
+      - grpc-cli-1.72.0-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
