Updated libtg_owt - 0.git29.c4192e8-2

--- a/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
+++ b/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: libtg_owt
-  version: 0.git29.c4192e8-1
-  arch:
-    - x86_64
-  pkgname:
-    - libtg_owt
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.git29.c4192e8-1
+    version: 0.git29.c4192e8-2
     packages:
-      - libtg_owt-0.git29.c4192e8-1-x86_64.pkg.tar.zst
+      - libtg_owt-0.git29.c4192e8-2-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
