--- a/world/libxkbcommon/.nvchecker.toml
+++ b/world/libxkbcommon/.nvchecker.toml
@@ -1,5 +1,4 @@
 [libxkbcommon]
-source = "github"
-github = "xkbcommon/libxkbcommon"
-use_max_tag = true
+source = "git"
+git = "https://github.com/xkbcommon/libxkbcommon.git"
 prefix = "xkbcommon-"
