--- a/system/curl/.artixlinux/pkgbase.yaml
+++ b/system/curl/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: curl
-  version: 8.13.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - curl
-    - libcurl-compat
-    - libcurl-gnutls
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 8.13.0-2
+    version: 8.14.0-2
     packages:
-      - curl-8.13.0-2-x86_64.pkg.tar.zst
-      - libcurl-compat-8.13.0-2-x86_64.pkg.tar.zst
-      - libcurl-gnutls-8.13.0-2-x86_64.pkg.tar.zst
+      - curl-8.14.0-2-x86_64.pkg.tar.zst
+      - libcurl-compat-8.14.0-2-x86_64.pkg.tar.zst
+      - libcurl-gnutls-8.14.0-2-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
