--- a/galaxy/labwc/.artixlinux/pkgbase.yaml
+++ b/galaxy/labwc/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -54,7 +54,7 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 0.8.4-2
+    version: 0.8.4-2.1
     packages:
-      - labwc-0.8.4-2-x86_64.pkg.tar.zst
+      - labwc-0.8.4-2.1-x86_64.pkg.tar.zst
     debug: []
