Updated ruby-sass-embedded - 1.89.0-1

--- a/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 team: world
 actions:
-  addRepo: world
-  removeRepo: world-gremlins
+  addRepo: world-gremlins
+  removeRepo: null
   triggersBuild: false
-  triggersRebuild: false
+  triggersRebuild: true
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -26,8 +26,9 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: null
-    packages: []
+    version: 1.89.0-1
+    packages:
+      - ruby-sass-embedded-1.89.0-1-any.pkg.tar.zst
     debug: []
   world:
     version: 1.89.0-1
