--- a/world/wsdd/.nvchecker.toml
+++ b/world/wsdd/.nvchecker.toml
@@ -1,5 +1,4 @@
 [wsdd]
-source = "github"
-github = "christgau/wsdd"
-use_max_tag = true
+source = "git"
+git = "https://github.com/christgau/wsdd.git"
 prefix = "v"
