--- a/world/wsdd/.artixlinux/pkgbase.yaml
+++ b/world/wsdd/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: wsdd
-  version: 0.8-3
-  arch:
-    - any
-  pkgname:
-    - wsdd
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.8-3
+    version: 0.9-1
     packages:
-      - wsdd-0.8-3-any.pkg.tar.zst
+      - wsdd-0.9-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
