Updated claws-mail - 4.3.1-2

--- a/galaxy/claws-mail/.artixlinux/pkgbase.yaml
+++ b/galaxy/claws-mail/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 team: galaxy
 actions:
-  addRepo: null
-  removeRepo: world-goblins
-  triggersBuild: false
+  addRepo: world-goblins
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: true
+  triggersRepoAdd: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -22,8 +22,9 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 4.3.1-2
+    packages:
+      - claws-mail-4.3.1-2-x86_64.pkg.tar.zst
     debug: []
   world-gremlins:
     version: null
