--- a/world/openmpi/PKGBUILD
+++ b/world/openmpi/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=(
   openmpi-docs
 )
 pkgver=5.0.7
-pkgrel=3
+pkgrel=5
 pkgdesc='High performance message passing library (MPI)'
 arch=(x86_64)
 url='https://www.open-mpi.org'
@@ -77,18 +77,18 @@ build() {
     --with-pmix=external
     --with-prrte=external
     --with-valgrind
-    # --with-ucc=/usr
-    # --with-ucx=/usr
+    #--with-ucc=/usr
+    #--with-ucx=/usr
     --with-cuda=/opt/cuda
     # this tricks the configure script to look for /usr/lib/pkgconfig/cuda.pc
     # instead of /opt/cuda/lib/pkgconfig/cuda.pc
     --with-cuda-libdir=/usr/lib
     --with-rocm=/opt/rocm
     # all components that link to libraries provided by optdepends must be run-time loadable
-    --enable-mca-dso=accelerator_cuda,accelerator_rocm,btl_smcuda,rcache_gpusm,rcache_rgpusm #,coll_ucc,scoll_ucc
+    --enable-mca-dso=accelerator_cuda,accelerator_rocm,btl_smcuda,rcache_gpusm,rcache_rgpusm,coll_ucc,scoll_ucc
     # mpirun should not warn on MCA component load failures by default - usually caused by missing optdepends, which is ok
     # https://docs.open-mpi.org/en/main/installing-open-mpi/configure-cli-options/installation.html
-    --with-show-load-errors='^accelerator,rcache' #,coll/ucc'
+    --with-show-load-errors='^accelerator,rcache,coll/ucc'
   )
   cd $pkgbase-$pkgver
 
