--- a/world/openmpi/.artixlinux/pkgbase.yaml
+++ b/world/openmpi/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: openmpi
-  version: 5.0.7-3
-  arch:
-    - x86_64
-  pkgname:
-    - openmpi
-    - openmpi-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.0.7-3
+    version: 5.0.7-5
     packages:
-      - openmpi-5.0.7-3-x86_64.pkg.tar.zst
-      - openmpi-docs-5.0.7-3-x86_64.pkg.tar.zst
+      - openmpi-5.0.7-5-x86_64.pkg.tar.zst
+      - openmpi-docs-5.0.7-5-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
