Updated moksha-theme-blueelectric - 0.5.18-1

--- a/galaxy/moksha-theme-blueelectric/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-theme-blueelectric/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-theme-blueelectric
-  version: 0.5.17-1
-  arch:
-    - any
-  pkgname:
-    - moksha-theme-blueelectric
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.5.17-1
+    version: 0.5.18-1
     packages:
-      - moksha-theme-blueelectric-0.5.17-1-any.pkg.tar.zst
+      - moksha-theme-blueelectric-0.5.18-1-any.pkg.tar.zst
+    debug: []
