Updated telegram-desktop - 5.14.3-3

--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-goblins
+  removeRepo: galaxy-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -53,8 +53,8 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 5.14.3-2
+    version: 5.14.3-3
     packages:
-      - telegram-desktop-5.14.3-2-x86_64.pkg.tar.zst
+      - telegram-desktop-5.14.3-3-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
