--- a/galaxy/qgis/.artixlinux/pkgbase.yaml
+++ b/galaxy/qgis/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,15 +46,16 @@ repos:
     packages: []
     debug: []
   galaxy-goblins:
-    version: null
-    packages: []
+    version: 3.42.2-2
+    packages:
+      - qgis-3.42.2-2-x86_64.pkg.tar.zst
     debug: []
   galaxy-gremlins:
     version: null
     packages: []
     debug: []
   galaxy:
-    version: 3.42.2-1.1
+    version: 3.42.3-1
     packages:
-      - qgis-3.42.2-1.1-x86_64.pkg.tar.zst
+      - qgis-3.42.3-1-x86_64.pkg.tar.zst
     debug: []
