--- a/system/pacman/rust.conf
+++ b/system/pacman/rust.conf
@@ -11,7 +11,7 @@
 
 # Flags used for the Rust compiler, similar in spirit to CFLAGS. Read
 # linkman:rustc[1] for more details on the available flags.
-RUSTFLAGS="-Cforce-frame-pointers=yes"
+RUSTFLAGS="-C force-frame-pointers=yes"
 
 # Additional compiler flags appended to `RUSTFLAGS` for use in debugging.
 # Usually this would include: ``-C debuginfo=2''. Read linkman:rustc[1] for
